--- a/static/style.css
+++ b/static/style.css
@@ -801,6 +801,11 @@ header {
     grid-template-rows: auto;
     font-family: var(--font-titles);
     margin: 5px;
+    align-items: center;
+}
+
+.cart-container .cart-header-product {
+    padding-left: 30px;
 }
 
 .cart-header-quantity {
@@ -819,14 +824,18 @@ header {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    margin: 5px;
-    margin-top: 15px;
-    border-bottom: 1px solid #ccc;
+    margin: 10px;
+    margin-top: 5px;
+    padding-top: 21px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
     height: 111px;
+    gap: 5px;
 }
 
 .cart-item-img {
     grid-row: span 3 / span 3;
+    padding-left: 21px;
 }
 
 .cart-item-image-img {
