feat(cart): add handler to increase quantity of the cart item from cart page

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -11,7 +11,7 @@
         </div>
         <div class="product-info">
           <h3>{{ .Name }}</h3>
-          <p class="price">{{ .Price }}</p>
+          <p class="price" data-raw="{{ .Price }}">{{ .Price }}</p>
         </div>
         <div class="details-button">
           <button
