--- a/templates/cart.html
+++ b/templates/cart.html
@@ -11,7 +11,8 @@
       {{end}}
     </div>
     {{ range .items }}
-    <div class="cart-item">
+    <div class="cart-item" id="cart-item-{{ .ProductID }}">
+      <input type="hidden" name="product-id" value="{{ .ProductID }}" />
       <div class="cart-item-img">
         <img
           src="{{ .Image }}"
@@ -26,14 +27,25 @@
             <i class="fa-solid fa-minus"></i>
           </button>
           <span id="qty-display">{{ .Quantity }}</span>
-          <button type="button" class="qty-btn" id="qty-increase">
+          <button
+            type="button"
+            class="qty-btn"
+            hx-post="/cart/increase"
+            hx-include="closest .cart-item"
+            hx-target="#cart-item-{{ .ProductID }}"
+            hx-swap="outerHTML"
+          >
             <i class="fa-solid fa-plus"></i>
           </button>
         </div>
         <p>Stock disponible: <span>{{ .Stock }}</span></p>
       </div>
-      <div class="cart-item-price price">{{ .Price }}</div>
-      <div class="cart-item-subtotal price">{{ .Subtotal }}</div>
+      <div class="cart-item-price price" data-raw="{{ .Price }}">
+        {{ .Price }}
+      </div>
+      <div class="cart-item-subtotal price" data-raw="{{ .Subtotal }}">
+        {{ .Subtotal }}
+      </div>
     </div>
     {{ else }}
     <div class="empty-cart">
