--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,44 +10,7 @@
       <div class="cart-header-subtotal">Subtotal</div>
       {{end}}
     </div>
-    {{ range .items }}
-    <div class="cart-item" id="cart-item-{{ .ProductID }}">
-      <input type="hidden" name="product-id" value="{{ .ProductID }}" />
-      <div class="cart-item-img">
-        <img
-          src="{{ .Image }}"
-          alt="Product Image"
-          class="cart-item-image-img"
-        />
-      </div>
-      <div class="cart-item-name">{{ .Name }}</div>
-      <div class="cart-item-quantity">
-        <div class="quantity-control">
-          <button type="button" class="qty-btn" id="qty-decrease">
-            <i class="fa-solid fa-minus"></i>
-          </button>
-          <span id="qty-display">{{ .Quantity }}</span>
-          <button
-            type="button"
-            class="qty-btn"
-            hx-post="/cart/increase"
-            hx-include="closest .cart-item"
-            hx-target="#cart-item-{{ .ProductID }}"
-            hx-swap="outerHTML"
-          >
-            <i class="fa-solid fa-plus"></i>
-          </button>
-        </div>
-        <p>Stock disponible: <span>{{ .Stock }}</span></p>
-      </div>
-      <div class="cart-item-price price" data-raw="{{ .Price }}">
-        {{ .Price }}
-      </div>
-      <div class="cart-item-subtotal price" data-raw="{{ .Subtotal }}">
-        {{ .Subtotal }}
-      </div>
-    </div>
-    {{ else }}
+    {{ range .items }} {{ template "cart_item" . }} {{ else }}
     <div class="empty-cart">
       <img src="/static/images/empty-cart.png" alt="empty-cart" />
     </div>
