--- a/static/style.css
+++ b/static/style.css
@@ -865,6 +865,11 @@ header {
     width: 100%;
 }
 
+#cart-total {
+    text-align: end;
+    padding-right: 81px;
+}
+
 /* Responsive */
 
 @media only screen and (max-width: 540px) {
