--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,6 +14,11 @@
     <div class="empty-cart">
       <img src="/static/images/empty-cart.png" alt="empty-cart" />
     </div>
+    {{ end }} {{ if .items }}
+    <div id="cart-total">
+      <strong>Total:</strong>
+      <span class="price" data-raw="{{ .Total }}">{{ .Total }}</span>
+    </div>
     {{ end }}
   </div>
 </main>
