--- a/static/style.css
+++ b/static/style.css
@@ -35,9 +35,11 @@ html {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    min-height: 100dvh;
+    min-height: calc(var(--vh, 1vh) * 100);
     display: flex;
     flex-direction: column;
+    transition: min-height 0.05s ease-out;
 }
 
 main {
