feat(checkout): add checkout.html file
- Create route to the new file

- Add a button in cart.html to redirect to the new file

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -18,6 +18,12 @@
     <div id="cart-total">
       <strong>Total:</strong>
       <span class="price" data-raw="{{ .Total }}">{{ .Total }}</span>
+      <button
+        class="checkout-button"
+        onclick="window.location.href='/checkout'"
+      >
+        Pagar
+      </button>
     </div>
     {{ end }}
   </div>
