--- a/static/style.css
+++ b/static/style.css
@@ -872,6 +872,23 @@ header {
     padding-right: 81px;
 }
 
+/* CheckOut */
+.checkout-button {
+    background-color: var(--button-color);
+    color: var(--contrast-color);
+    padding: 10px 18px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: background 0.3s ease;
+    font-family: var(--font-content);
+}
+
+.checkout-button:hover {
+    background-color: var(--button-hover);
+}
+
 /* Responsive */
 
 @media only screen and (max-width: 540px) {
