--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,8 @@
     --prices-color: #777;
     --button-color: black;
     --button-hover: #333;
+    --placeholder: rgb(255, 255, 255);
+    --orange: rgb(228, 88, 44);
 }
 
 /* Web Kit */
@@ -24,7 +26,7 @@ input[type='number']::-webkit-inner-spin-button {
     margin: 0;
 }
 ::-webkit-input-placeholder {
-    color: var(--contrast-color);
+    color: var(--placeholder);
 }
 
 body,
@@ -107,7 +109,7 @@ header {
 }
 
 .header-nav-button:hover {
-    background-color: rgb(228, 88, 44);
+    background-color: var(--orange);
     transition: background-size 1s;
     transform: translateZ(30px) scale(1);
 }
@@ -642,6 +644,11 @@ header {
     overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.105);
     border-radius: 5px;
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.127);
+    padding: 5px;
 }
 
 .modal-image img {
@@ -662,6 +669,10 @@ header {
 
 .modal-name h1 {
     text-align: center;
+    color: var(--orange);
+    background-color: white;
+    border-radius: 0.5em;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 .modal-description {
@@ -844,6 +855,11 @@ header {
     width: 70px;
     height: 70px;
     border: 1px solid #ccc;
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 5px;
 }
 
 .cart-item-quantity {
@@ -886,6 +902,102 @@ header {
 }
 
 .checkout-button:hover {
+    background-color: var(--button-hover);
+}
+
+.checkout-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    align-items: center;
+    margin: 21px;
+}
+
+.checkout-info-container {
+    justify-items: stretch;
+    box-sizing: border-box;
+    background: var(--contrast-color);
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.684);
+    padding: 5px;
+}
+
+.checkout-title {
+    margin-left: 41px;
+    margin-bottom: -31px;
+}
+
+.checkout-input {
+    position: relative;
+    border-radius: 21px;
+    background-color: rgb(207, 207, 207);
+    margin-bottom: 5px;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 10px 10px 10px;
+    box-sizing: border-box;
+    border: none;
+}
+
+.checkout-input label {
+    position: absolute;
+    top: 0;
+    left: 20px;
+    transform: translateY(-50%);
+    background-color: var(--main-color);
+    color: var(--contrast-color);
+    padding: 4px 12px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-family: var(--font-content);
+    font-size: 0.9rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.checkout-input:hover {
+    background-color: gray;
+}
+
+.checkout-input input::placeholder {
+    font-family: var(--font-content);
+    font-size: 16px;
+}
+
+.checkout-input input {
+    color: var(--main-color);
+    background: none;
+    border: none;
+    font-size: 16px;
+    font-family: var(--font-content);
+    outline: none;
+    width: 100%;
+}
+
+.checkout-button-container {
+    margin: 21px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkout-button-container button {
+    background-color: var(--button-color);
+    color: var(--contrast-color);
+    padding: 10px 18px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: background 0.3s ease;
+    font-family: var(--font-content);
+    width: 150px;
+}
+
+.checkout-button-container button:hover {
     background-color: var(--button-hover);
 }
 
