--- a/templates/cart_item_with_total.html
+++ b/templates/cart_item_with_total.html
@@ -1,9 +1,11 @@
 {{ template "cart_item" .Item }}
 
 <div id="cart-total" hx-swap-oob="true">
-  <strong>Total:</strong>
-  <span class="price" data-raw="{{ .Total }}">{{ .Total }}</span>
-  <button class="checkout-button" onclick="window.location.href='/checkout'">
-    Pagar
-  </button>
+  <form action="/checkout" method="post">
+    <input type="hidden" name="total" value="{{ .Total }}" />
+    <input type="hidden" name="description" value="{{ .Description }}" />
+    <strong>Total:</strong>
+    <span class="price" data-raw="{{ .Total }}">{{ .Total }}</span>
+    <button class="checkout-button" type="submit">Pagar</button>
+  </form>
 </div>
