--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@
     --button-hover: #333;
     --placeholder: rgb(255, 255, 255);
     --orange: rgb(228, 88, 44);
+    --color-menu: #fff8f0;
 }
 
 /* Web Kit */
@@ -138,7 +139,6 @@ header {
     top: 80px;
     right: 21px;
     width: 210px;
-    font-size: small;
     max-height: 0px;
     overflow: hidden;
     transition: max-height 0.3s;
@@ -149,14 +149,14 @@ header {
 }
 
 .sub-menu {
-    background: var(--main-color);
+    background: var(--color-menu);
     padding: 20px;
     margin: 10px;
     border-radius: 5px;
 }
 
 .sub-menu h3 {
-    color: var(--contrast-color);
+    color: var(--orange);
     font-size: smaller;
 }
 
@@ -164,7 +164,7 @@ header {
     border: 0;
     height: 1px;
     width: 100%;
-    background: rgb(189, 189, 189);
+    background: var(--orange);
     margin: 15px 0 10px;
 }
 
@@ -174,9 +174,10 @@ header {
     width: 100%;
     align-items: center;
     text-decoration: none;
-    color: var(--contrast-color);
+    color: var(--orange);
     margin: 12px 0;
     cursor: pointer;
+    border-bottom: 1px solid #e0cdb8;
 }
 
 .sub-menu-link p {
@@ -185,11 +186,11 @@ header {
 
 .sub-menu-link i {
     font-size: 10px;
-    color: var(--main-color);
     background: var(--contrast-color);
     border-radius: 50%;
     padding: 8px;
     margin-right: 15px;
+    color: var(--orange);
 }
 
 .sub-menu-link span {
@@ -999,6 +1000,54 @@ header {
 
 .checkout-button-container button:hover {
     background-color: var(--button-hover);
+}
+
+/*Dropdown Menu*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+    transition: max-height 0.3s;
+}
+
+.dropdown-content.open-dropdown {
+    max-height: 400px;
+}
+
+.dropdown-content {
+    position: absolute;
+    right: 0;
+    background-color: var(--color-menu);
+    min-width: 180px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
+    border-radius: 5px;
+    overflow: hidden;
+    max-height: 0px;
+    transition: max-height 0.3s ease;
+}
+
+.dropdown-content a {
+    color: var(--orange);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-family: var(--font-content);
+    border-bottom: 1px solid #e0cdb8;
+}
+
+.dropdown-content a:hover {
+    background-color: #f0d9b5;
+}
+
+/* Delete Blue Borders on buttons */
+a {
+    color: inherit;
+}
+
+.logout-menu {
+    all: unset;
+    cursor: pointer;
+    width: 100%;
 }
 
 /* Responsive */
