style(ui): update font colors in product modal and menus, fix overflow issues in dashboard and cart pages

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -77,6 +77,12 @@
             required
           />
         </div>
+        <div class="terms-conditions" id="terms-conditions">
+          <label for="terms-conditions"
+            >Aceptar los <a href="">términos y condiciones</a></label
+          >
+          <input name="terms-conditions" type="checkbox" required />
+        </div>
         <div class="checkout-button-container">
           <button>Pagar</button>
         </div>
