--- a/templates/login.html
+++ b/templates/login.html
@@ -214,6 +214,12 @@
             />
             <i class="fa-solid fa-lock"></i>
           </div>
+          <div class="terms-conditions" id="terms-conditions">
+            <label for="terms-conditions" style="color: white"
+              >Aceptar los <a href="">términos y condiciones</a></label
+            >
+            <input name="terms-conditions" type="checkbox" required />
+          </div>
           <div class="input-box">
             <input type="submit" class="submit" value="Regístrate" required />
           </div>
