feat(ui): add terms and conditions modal
- Create modal for terms and conditions as a template terms_conditions.html

- Add logic to show and close modal in script.js

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -79,7 +79,8 @@
         </div>
         <div class="terms-conditions" id="terms-conditions">
           <label for="terms-conditions"
-            >Aceptar los <a href="">términos y condiciones</a></label
+            >Aceptar los
+            <a href="#" id="open-modal-link">términos y condiciones</a></label
           >
           <input name="terms-conditions" type="checkbox" required />
         </div>
@@ -90,4 +91,4 @@
     </div>
   </div>
 </main>
-{{ template "footer" .}}
+{{ template "terms_conditions.html" . }} {{ template "footer" .}}
