--- a/templates/login.html
+++ b/templates/login.html
@@ -216,7 +216,8 @@
           </div>
           <div class="terms-conditions" id="terms-conditions">
             <label for="terms-conditions" style="color: white"
-              >Aceptar los <a href="">términos y condiciones</a></label
+              >Aceptar los
+              <a href="#" id="open-modal-link">términos y condiciones</a></label
             >
             <input name="terms-conditions" type="checkbox" required />
           </div>
@@ -228,4 +229,4 @@
     </div>
   </div>
 </main>
-{{ template "footer" . }}
+{{ template "terms_conditions.html" . }} {{ template "footer" . }}
