--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,15 @@
 {{ template "base" .}}
-<main><div>This is the index</div></main>
+<main>
+  <div class="index-content">
+    <div class="container-video">
+      <button class="btn-sonido" onclick="soundActivator()">
+        Activar sonido
+      </button>
+      <video id="videoStopMotion" autoplay loop muted playsinline>
+        <source src="/static/images/stop definitivo2.mp4" type="video/mp4" />
+        Tu navegador no soporta el video.
+      </video>
+    </div>
+  </div>
+</main>
 {{ template "footer" .}}
