--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 <main>
   <div class="index-content">
     <div class="container-video">
-      <button class="btn-sonido" onclick="soundActivator()">
-        Activar sonido
+      <button class="btn-sound" onclick="soundActivator()">
+        <i class="fa-solid fa-volume-high"></i>
       </button>
+      <button class="btn-store"><a href="/shop">Tienda</a></button>
       <video id="videoStopMotion" autoplay loop muted playsinline>
-        <source src="/static/images/stop definitivo2.mp4" type="video/mp4" />
+        <source src="/static/images/StopMotion.mp4" type="video/mp4" />
         Tu navegador no soporta el video.
       </video>
     </div>
