feat(dashboard): Add transaction dashboard in dashboard.html
- Add javascript logic to fill the fields in dahsborad.html

--- a/static/style.css
+++ b/static/style.css
@@ -441,7 +441,8 @@ header {
     height: 100%;
     box-sizing: border-box;
     padding: 1rem;
-    background-color: blue;
+    background-color: var(--background-forms);
+    color: var(--contrast-color);
 }
 
 .item {
